[package]
name = "solana-client-helpers"
version = "0.5.0"
description = "Helpers for Solana RPC-client"
authors = ["Alexander XX <freecoder.xx@gmail.com>"]
repository = "https://github.com/p2p-org/solana-admin-client.git"
categories = ["network-programming", "web-programming::http-client"]
keywords = ["solana", "rpc", "client", "helper"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
thiserror = "1.0"
solana-sdk = "1.6"
solana-client = "1.6"
spl-token = { version = "3.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0", features = ["no-entrypoint"] }
